--- a/springcloud-gateway/src/main/resources/application.yml
+++ b/springcloud-gateway/src/main/resources/application.yml
@@ -11,11 +11,11 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: first-microservice
+        - id: first-service
           uri: http://localhost:8081/
           predicates:
             - Path=/first/**
-        - id: second-microservice
+        - id: second-service
           uri: http://localhost:8082/
           predicates:
             - Path=/second/**
